Ios Initial Commit
Commitng Ios Document with the original assignment

--- a/ChitChat_IOS/ChitChat_Calarese/Base.lproj/Main.storyboard
+++ b/ChitChat_IOS/ChitChat_Calarese/Base.lproj/Main.storyboard
@@ -50,8 +50,8 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="149"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jk9-hH-i7k">
-                                            <rect key="frame" x="14" y="53" width="42" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jk9-hH-i7k">
+                                            <rect key="frame" x="186" y="54" width="42" height="20.5"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -62,21 +62,30 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JN2-U1-Uta">
-                                            <rect key="frame" x="22" y="106" width="34" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JN2-U1-Uta">
+                                            <rect key="frame" x="54" y="105" width="34" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dislikes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10C-Hf-cjP">
-                                            <rect key="frame" x="250" y="105" width="56.5" height="21"/>
+                                            <rect key="frame" x="282.5" y="105" width="24" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1TE-qh-aY0">
+                                            <rect key="frame" x="314.5" y="85" width="70.5" height="57"/>
+                                            <state key="normal" title="Dislike Button" image="hand.thumbsdown.fill" catalog="system"/>
+                                            <connections>
+                                                <action selector="dislike_message:" destination="h4N-15-txn" eventType="touchUpInside" id="hul-BN-Gl3"/>
+                                            </connections>
+                                        </button>
                                         <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cNH-72-kVh">
-                                            <rect key="frame" x="90" y="94" width="46" height="40"/>
+                                            <rect key="frame" x="106" y="81" width="82" height="61"/>
                                             <constraints>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="82" id="2RN-oO-TYW"/>
+                                                <constraint firstAttribute="width" secondItem="cNH-72-kVh" secondAttribute="height" multiplier="82:61" id="B9g-yH-Gia"/>
                                                 <constraint firstAttribute="width" constant="20" id="hOg-F4-cxD"/>
                                             </constraints>
                                             <state key="normal" image="hand.thumbsup.fill" catalog="system"/>
@@ -84,36 +93,33 @@
                                                 <action selector="like_message:" destination="h4N-15-txn" eventType="touchUpInside" id="Zi5-Fg-4br"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1TE-qh-aY0">
-                                            <rect key="frame" x="334" y="85" width="51" height="57"/>
-                                            <state key="normal" title="Dislike Button" image="hand.thumbsdown.fill" catalog="system"/>
-                                            <connections>
-                                                <action selector="dislike_message:" destination="h4N-15-txn" eventType="touchUpInside" id="hul-BN-Gl3"/>
-                                            </connections>
-                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="1TE-qh-aY0" firstAttribute="leading" secondItem="tMY-DX-U0t" secondAttribute="leading" constant="334" id="1Fl-xe-oYM"/>
                                         <constraint firstAttribute="bottom" secondItem="jk9-hH-i7k" secondAttribute="bottom" constant="75.5" id="1di-p3-goq"/>
+                                        <constraint firstItem="1TE-qh-aY0" firstAttribute="leading" secondItem="cNH-72-kVh" secondAttribute="trailing" constant="146" id="42y-Zb-2zR"/>
                                         <constraint firstItem="10C-Hf-cjP" firstAttribute="leading" secondItem="tMY-DX-U0t" secondAttribute="leading" constant="250" id="9hg-PC-AyP"/>
                                         <constraint firstAttribute="bottom" secondItem="1TE-qh-aY0" secondAttribute="bottom" constant="7" id="9ic-iE-eMG"/>
+                                        <constraint firstItem="cNH-72-kVh" firstAttribute="top" secondItem="UlH-5T-42q" secondAttribute="bottom" constant="44.5" id="C23-zn-5Cm"/>
                                         <constraint firstItem="JN2-U1-Uta" firstAttribute="top" secondItem="tMY-DX-U0t" secondAttribute="top" constant="106" id="CaB-ex-6LF"/>
-                                        <constraint firstAttribute="trailing" secondItem="JN2-U1-Uta" secondAttribute="trailing" constant="358" id="HQN-GR-e9Q"/>
                                         <constraint firstItem="cNH-72-kVh" firstAttribute="leading" secondItem="tMY-DX-U0t" secondAttribute="leading" constant="90" id="JRH-dK-jve"/>
                                         <constraint firstAttribute="bottom" secondItem="cNH-72-kVh" secondAttribute="bottom" constant="15" id="JjA-m0-NmE"/>
                                         <constraint firstAttribute="bottom" secondItem="UlH-5T-42q" secondAttribute="bottom" constant="112.5" id="KVS-3G-qBY"/>
                                         <constraint firstItem="1TE-qh-aY0" firstAttribute="leading" secondItem="10C-Hf-cjP" secondAttribute="trailing" constant="8" id="LxS-Gx-14H"/>
-                                        <constraint firstItem="JN2-U1-Uta" firstAttribute="leading" secondItem="tMY-DX-U0t" secondAttribute="leading" constant="22" id="OBX-AI-te5"/>
+                                        <constraint firstItem="cNH-72-kVh" firstAttribute="leading" secondItem="JN2-U1-Uta" secondAttribute="trailing" constant="26" id="NBh-1S-zA2"/>
                                         <constraint firstItem="jk9-hH-i7k" firstAttribute="top" secondItem="tMY-DX-U0t" secondAttribute="top" constant="53" id="QG3-Mw-rNC"/>
                                         <constraint firstItem="1TE-qh-aY0" firstAttribute="top" secondItem="tMY-DX-U0t" secondAttribute="top" constant="85" id="Qlx-Bp-nhV"/>
                                         <constraint firstItem="UlH-5T-42q" firstAttribute="top" secondItem="tMY-DX-U0t" secondAttribute="top" constant="11" id="QpK-aP-QdG"/>
                                         <constraint firstAttribute="trailing" secondItem="UlH-5T-42q" secondAttribute="trailing" constant="79" id="R96-9F-og1"/>
                                         <constraint firstItem="UlH-5T-42q" firstAttribute="leading" secondItem="tMY-DX-U0t" secondAttribute="leading" constant="20" id="Rze-Ka-oIH"/>
+                                        <constraint firstItem="JN2-U1-Uta" firstAttribute="leading" secondItem="tMY-DX-U0t" secondAttribute="leading" constant="54" id="TyT-f7-2Bx"/>
                                         <constraint firstItem="1TE-qh-aY0" firstAttribute="leading" secondItem="10C-Hf-cjP" secondAttribute="trailing" constant="8" id="Ukh-5R-Rgj"/>
+                                        <constraint firstItem="10C-Hf-cjP" firstAttribute="leading" secondItem="cNH-72-kVh" secondAttribute="trailing" constant="114" id="VCM-NK-gER"/>
                                         <constraint firstAttribute="trailing" secondItem="1TE-qh-aY0" secondAttribute="trailing" constant="29" id="VeK-5t-tiF"/>
                                         <constraint firstItem="10C-Hf-cjP" firstAttribute="top" secondItem="tMY-DX-U0t" secondAttribute="top" constant="105" id="Vyf-QN-keK"/>
                                         <constraint firstAttribute="bottom" secondItem="10C-Hf-cjP" secondAttribute="bottom" constant="23" id="cSf-oS-36K"/>
                                         <constraint firstAttribute="bottom" secondItem="JN2-U1-Uta" secondAttribute="bottom" constant="22.5" id="fAr-FC-Up9"/>
+                                        <constraint firstItem="10C-Hf-cjP" firstAttribute="leading" secondItem="JN2-U1-Uta" secondAttribute="trailing" constant="136" id="liq-v8-qva"/>
                                         <constraint firstItem="cNH-72-kVh" firstAttribute="top" secondItem="tMY-DX-U0t" secondAttribute="top" constant="86" id="vjg-p4-To1"/>
                                         <constraint firstAttribute="trailing" secondItem="cNH-72-kVh" secondAttribute="trailing" constant="278" id="y0d-9j-en0"/>
                                         <constraint firstAttribute="trailing" secondItem="10C-Hf-cjP" secondAttribute="trailing" constant="107.5" id="ynq-IF-hRP"/>
